--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,18 +6,19 @@ media_folder: "images"
 public_folder: "/images"
 
 collections:
-  - name: "updates"
-    label: "Updates"
+  - name: "springkastelen"
+    label: "Springkastelen"
     files:
-      - file: "content/updates/updates.json"
-        label: "Updates lijst"
-        name: "updates"
+      - file: "content/springkastelen.json"
+        label: "Aanbod"
+        name: "aanbod"
         fields:
-          - label: "Items"
+          - label: "Springkastelen"
             name: "items"
             widget: "list"
             fields:
-              - { label: "Titel", name: "title", widget: "string" }
-              - { label: "Datum", name: "date", widget: "datetime" }
-              - { label: "Tekst", name: "text", widget: "text" }
+              - { label: "Naam", name: "name", widget: "string" }
+              - { label: "Beschrijving", name: "description", widget: "text" }
+              - { label: "Prijs", name: "price", widget: "string", required: false }
+              - { label: "Capaciteit", name: "capacity", widget: "string", required: false }
               - { label: "Afbeelding", name: "image", widget: "image", required: false }
